# analisederequisitos

./: README.md  pyproject.toml
src/core/: settings.py
src/requisitos/: admin.py  models.py
src/requisitos/migrations/: 0001_initial.py  0002_remove_modelointermediario_meta_modelo_and_more.py  0003_requisito_sprint_and_more.py
src/requisitos/tests/factories/: __init__.py
