[tool.poetry]
name = "analisederequisitos"
version = "0.1.0"
description = "Projeto com intuito de estudar sobre analise de requisios utilizando django admin"
authors = ["Juan Felipe <103801874+JuanLadeira@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.2.6"
python-decouple = "^3.8"
django-jazzmin = "^2.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
